@@ -29,6 +29,7 @@ from ..conftest import (
     TEST_COLLECTION_NAME,
     DataAPICredentials,
     DataAPICredentialsInfo,
+    async_fail_if_not_removed,
 )
 
 
@@ -235,6 +236,7 @@ class TestDDLAsync:
             namespace=data_api_credentials_info["secondary_namespace"]
         )
 
+    @async_fail_if_not_removed
     @pytest.mark.skipif(
         SECONDARY_NAMESPACE is None, reason="No secondary namespace provided"
     )
@@ -255,6 +257,28 @@ class TestDDLAsync:
         at_database.use_namespace(data_api_credentials_info["secondary_namespace"])
         assert at_database != async_database
         assert at_database.namespace == data_api_credentials_info["secondary_namespace"]
+        assert TEST_COLLECTION_NAME not in await at_database.list_collection_names()
+
+    @pytest.mark.skipif(
+        SECONDARY_NAMESPACE is None, reason="No secondary keyspace provided"
+    )
+    @pytest.mark.describe("test of Database use_keyspace, async")
+    async def test_database_use_keyspace_async(
+        self,
+        async_database: AsyncDatabase,
+        async_collection: AsyncCollection,
+        data_api_credentials_kwargs: DataAPICredentials,
+        data_api_credentials_info: DataAPICredentialsInfo,
+    ) -> None:
+        # make a copy to avoid mutating the fixture
+        at_database = async_database._copy()
+        assert at_database == async_database
+        assert at_database.keyspace == data_api_credentials_kwargs["namespace"]
+        assert TEST_COLLECTION_NAME in await at_database.list_collection_names()
+
+        at_database.use_keyspace(data_api_credentials_info["secondary_namespace"])  # type: ignore[arg-type]
+        assert at_database != async_database
+        assert at_database.keyspace == data_api_credentials_info["secondary_namespace"]
         assert TEST_COLLECTION_NAME not in await at_database.list_collection_names()
 
     @pytest.mark.skipif(
