@@ -18,16 +18,24 @@ import pytest
 
 from astrapy import AsyncDatabase, Database
 
-from ..conftest import DO_IDIOMATIC_ADMIN_TESTS, IS_ASTRA_DB
+from ..conftest import (
+    DO_IDIOMATIC_ADMIN_TESTS,
+    IS_ASTRA_DB,
+    async_fail_if_not_removed,
+    sync_fail_if_not_removed,
+)
 
 
 @pytest.mark.skipif(IS_ASTRA_DB, reason="Not supported on Astra DB")
 @pytest.mark.skipif(not DO_IDIOMATIC_ADMIN_TESTS, reason="Admin tests are suppressed")
 class TestNonAstraAdmin:
+    @sync_fail_if_not_removed
     @pytest.mark.describe(
         "test of the namespace crud with non-Astra DataAPIDatabaseAdmin, sync"
     )
-    def test_nonastra_database_admin_sync(self, sync_database: Database) -> None:
+    def test_nonastra_database_admin_namespaces_sync(
+        self, sync_database: Database
+    ) -> None:
         """
         Test plan
         - database -> get_database_admin
@@ -38,6 +46,7 @@ class TestNonAstraAdmin:
             - drop namespace
             - list namespaces, check
             - ALSO: test the update_db_namespace flag when creating from db->dbadmin
+        This version runs the deprecated 'namespace' commands
         """
         NEW_NS_NAME = "tnaa_test_ns_s"
         NEW_COLL_NAME = "tnaa_test_coll"
@@ -79,10 +88,11 @@ class TestNonAstraAdmin:
         database_admin.drop_namespace(NEW_NS_NAME_NOT_UPDATED)
         database_admin.drop_namespace(NEW_NS_NAME_UPDATED)
 
+    @async_fail_if_not_removed
     @pytest.mark.describe(
         "test of the namespace crud with non-Astra DataAPIDatabaseAdmin, async"
     )
-    async def test_nonastra_database_admin_async(
+    async def test_nonastra_database_admin_namespaces_async(
         self, async_database: AsyncDatabase
     ) -> None:
         """
@@ -95,6 +105,7 @@ class TestNonAstraAdmin:
             - drop namespace
             - list namespaces, check
             - ALSO: test the update_db_namespace flag when creating from db->dbadmin
+        This version runs the deprecated 'namespace' commands
         """
         NEW_NS_NAME = "tnaa_test_ns_a"
         NEW_COLL_NAME = "tnaa_test_coll"
@@ -137,3 +148,121 @@ class TestNonAstraAdmin:
 
         await database_admin.async_drop_namespace(NEW_NS_NAME_NOT_UPDATED)
         await database_admin.async_drop_namespace(NEW_NS_NAME_UPDATED)
+
+    @pytest.mark.describe(
+        "test of the keyspace crud with non-Astra DataAPIDatabaseAdmin, sync"
+    )
+    def test_nonastra_database_admin_keyspaces_sync(
+        self, sync_database: Database
+    ) -> None:
+        """
+        Test plan
+        - database -> get_database_admin
+            - list keyspaces, check name not there
+            - create a keyspace
+            - list keyspaces, check
+            - database -> create_collection/list_collection_names
+            - drop keyspace
+            - list keyspaces, check
+            - ALSO: test the update_db_namespace flag when creating from db->dbadmin
+        This version uses v2.0-compliant 'keyspace' method names
+        """
+        NEW_NS_NAME = "tnaa_test_ns_s"
+        NEW_COLL_NAME = "tnaa_test_coll"
+        database_admin = sync_database.get_database_admin()
+
+        keyspaces1 = set(database_admin.list_keyspaces())
+        assert NEW_NS_NAME not in keyspaces1
+
+        create_response = database_admin.create_keyspace(NEW_NS_NAME)
+        assert create_response == {"ok": 1}
+
+        keyspaces2 = set(database_admin.list_keyspaces())
+        assert NEW_NS_NAME in keyspaces2
+
+        sync_database_ns = sync_database.with_options(namespace=NEW_NS_NAME)
+        sync_database_ns.create_collection(NEW_COLL_NAME)
+        assert NEW_COLL_NAME in sync_database_ns.list_collection_names()
+
+        drop_response = database_admin.drop_keyspace(NEW_NS_NAME)
+        assert drop_response == {"ok": 1}
+
+        keyspaces3 = set(database_admin.list_keyspaces())
+        assert keyspaces3 == keyspaces1
+
+        # update_db_namespace:
+        NEW_NS_NAME_NOT_UPDATED = "tnudn_notupd"
+        NEW_NS_NAME_UPDATED = "tnudn_upd"
+
+        database = sync_database._copy()
+
+        keyspace0 = database.keyspace
+        database_admin = database.get_database_admin()
+        database_admin.create_keyspace(NEW_NS_NAME_NOT_UPDATED)
+        assert database.keyspace == keyspace0
+
+        database_admin.create_keyspace(NEW_NS_NAME_UPDATED, update_db_namespace=True)
+        assert database.keyspace == NEW_NS_NAME_UPDATED
+
+        database_admin.drop_keyspace(NEW_NS_NAME_NOT_UPDATED)
+        database_admin.drop_keyspace(NEW_NS_NAME_UPDATED)
+
+    @pytest.mark.describe(
+        "test of the keyspace crud with non-Astra DataAPIDatabaseAdmin, async"
+    )
+    async def test_nonastra_database_admin_keyspaces_async(
+        self, async_database: AsyncDatabase
+    ) -> None:
+        """
+        Test plan
+        - database -> get_database_admin
+            - list keyspaces, check name not there
+            - create a keyspace
+            - list keyspaces, check
+            - database -> create_collection/list_collection_names
+            - drop keyspace
+            - list keyspaces, check
+            - ALSO: test the update_db_namespace flag when creating from db->dbadmin
+        This version uses v2.0-compliant 'keyspace' method names
+        """
+        NEW_NS_NAME = "tnaa_test_ns_a"
+        NEW_COLL_NAME = "tnaa_test_coll"
+        database_admin = async_database.get_database_admin()
+
+        keyspaces1 = set(await database_admin.async_list_keyspaces())
+        assert NEW_NS_NAME not in keyspaces1
+
+        create_response = await database_admin.async_create_keyspace(NEW_NS_NAME)
+        assert create_response == {"ok": 1}
+
+        keyspaces2 = set(await database_admin.async_list_keyspaces())
+        assert NEW_NS_NAME in keyspaces2
+
+        async_database_ns = async_database.with_options(namespace=NEW_NS_NAME)
+        await async_database_ns.create_collection(NEW_COLL_NAME)
+        assert NEW_COLL_NAME in (await async_database_ns.list_collection_names())
+
+        drop_response = await database_admin.async_drop_keyspace(NEW_NS_NAME)
+        assert drop_response == {"ok": 1}
+
+        keyspaces3 = set(await database_admin.async_list_keyspaces())
+        assert keyspaces3 == keyspaces1
+
+        # update_db_namespace:
+        NEW_NS_NAME_NOT_UPDATED = "tnudn_notupd"
+        NEW_NS_NAME_UPDATED = "tnudn_upd"
+
+        adatabase = async_database._copy()
+
+        keyspace0 = adatabase.keyspace
+        database_admin = adatabase.get_database_admin()
+        await database_admin.async_create_keyspace(NEW_NS_NAME_NOT_UPDATED)
+        assert adatabase.keyspace == keyspace0
+
+        await database_admin.async_create_keyspace(
+            NEW_NS_NAME_UPDATED, update_db_namespace=True
+        )
+        assert adatabase.keyspace == NEW_NS_NAME_UPDATED
+
+        await database_admin.async_drop_keyspace(NEW_NS_NAME_NOT_UPDATED)
+        await database_admin.async_drop_keyspace(NEW_NS_NAME_UPDATED)
